# glmark2-jellyfish

./: CMakeLists.txt
common/: texture.cpp  texture.hpp
jellyfish/: FrameRate.txt  FrameRateInstanced.txt  jellyfish  main.cpp
jellyfish/data/: conf.h  jellyfish_attributes.h
jellyfish/data/group/: offset.json
jellyfish/shaders/: gradient.frag  gradient.vert  jellyfish.frag  jellyfish.vert  jellyfishInstanced.vert
jellyfish/src/: AbstractJellyfish.cpp  AbstractJellyfish.h  InstancedJellyfish.cpp  InstancedJellyfish.h  MultipleJellyfish.cpp  MultipleJellyfish.h  SingleJellyfish.cpp  SingleJellyfish.h  gradient.cpp  gradient.h
jellyfish/util/: time.h
